--- a/css/media querie/400p.css
+++ b/css/media querie/400p.css
@@ -22,4 +22,14 @@
     margin: 0;
     margin: 10px auto;
   }
+
+  .work-section h1 {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .card-group .card {
+    margin: 30px 0 !important;
+  }
 }
