who am i partlly completed

--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,12 @@ body {
   height: 100vh;
 }
 
+.h-100 {
+  height: 100vh;
+}
+
 .sec {
   display: flex;
-  height: 100vh;
 }
 
 .gap {
@@ -67,4 +70,8 @@ body {
 .cv {
   margin-top: 20px;
   font-size: 1.3rem;
+}
+
+.navbar {
+  display: none !important;
 }
