--- a/css/media querie/1000p.css
+++ b/css/media querie/1000p.css
@@ -19,4 +19,25 @@
   .card-group .card {
     margin: 30px 100px !important;
   }
+
+  .slice {
+    width: 100%;
+    height: 20vh;
+  }
+
+  .side-bar {
+    width: 200px;
+  }
+  .gap {
+    min-width: 200px;
+  }
+
+  .mail .e {
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+  }
+
+  .mail p {
+    font-size: 1rem;
+  }
 }
