--- a/css/my-works.css
+++ b/css/my-works.css
@@ -1,10 +1,10 @@
-.work-section {
+.sec-sec {
   text-align: center;
   margin-top: 50px;
   width: 100%;
 }
 
-.work-section h1 {
+.heading-1 {
   display: inline-block;
   padding-bottom: 5px;
   border-bottom: 2px solid black;
