--- a/pat/style.css
+++ b/pat/style.css
@@ -1,19 +1,8 @@
-#particles-js {
-  height: 100vh;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  background-image: linear-gradient(to right, hsl(198, 44%, 11%), #2c3e50);
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.con {
-  position: absolute;
-  height: 70vh;
-  width: 80%;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: white;
+body {
+  overflow-x: hidden;
 }
