--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
 }
 
+a:hover {
+  text-decoration: none;
+}
 body {
   font-family: "Poppins", sans-serif;
   position: relative;
