--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
   position: relative;
   /* background-image: linear-gradient(to bottom, #282c2d 20%, #171717);
   background-repeat: no-repeat; */
-  height: 100vh;
+  overflow-x: hidden;
 }
 
 .h-100 {
