--- a/css/whoami.css
+++ b/css/whoami.css
@@ -75,3 +75,9 @@
   display: inline-block;
   margin-left: auto;
 }
+
+.footer {
+  height: 20vh;
+  margin-top: -10px;
+  background-color: #111111;
+}
