a little bit more

--- a/css/media querie/1000p.css
+++ b/css/media querie/1000p.css
@@ -50,4 +50,11 @@
   .con {
     left: 60%;
   }
+
+  .con-info {
+    transform: translateX(-30%) translateY(-50%);
+  }
+  .right-text {
+    font-size: 1rem;
+  }
 }
