--- a/css/media querie/800p.css
+++ b/css/media querie/800p.css
@@ -50,4 +50,20 @@
     width: 80%;
     height: 80vh;
   }
+
+  .con-info {
+    transform: translateX(-50%) translateY(-50%);
+  }
+
+  .con-info {
+    width: 70%;
+  }
+
+  .con-c {
+    width: 70%;
+  }
+
+  .con-c h3 {
+    font-size: 1.5rem;
+  }
 }
