--- a/css/media querie/400p.css
+++ b/css/media querie/400p.css
@@ -15,6 +15,10 @@
     flex-direction: column;
   }
 
+  .profile .button-group {
+    flex-direction: row !important;
+  }
+
   .youtube,
   .github,
   .cv {
