--- a/css/whoami.css
+++ b/css/whoami.css
@@ -36,7 +36,7 @@
 
 .who-text {
   color: white;
-  border-bottom: 1px solid white;
+  border-bottom: 2px solid white;
 }
 
 .img-2 {
@@ -173,6 +173,7 @@
 }
 .num {
   margin-bottom: 0;
+  display: inline-block;
 }
 
 .num:hover {
